--- a/Landing_page/package.json
+++ b/Landing_page/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-multi-carousel": "^2.8.4",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "styled-components": "^5.3.11"
